Port Field Emitters to Forge 1.20.1 and Java 17